--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -1,24 +1,22 @@
-name: Deploy
+name: Publish on GitHub Pages
 
 on:
   push:
-    branches: ["main"]
+    branches: [ main ]
 
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
   contents: read
   pages: write
   id-token: write
 
 jobs:
-  deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
+  build:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout
+      - name: Clone repository
         uses: actions/checkout@v3
+
       - name: Setup Deno environment
         uses: denoland/setup-deno@v1
         with:
@@ -26,12 +24,15 @@ jobs:
 
       - name: Build site
         run: deno task build
+      
       - name: Setup Pages
         uses: actions/configure-pages@v2
+      
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
           path: '_site'
+
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v1
